--- a/src/theme/scss/button.module.scss
+++ b/src/theme/scss/button.module.scss
@@ -8,3 +8,13 @@
     border-left: 1px var(--white) solid;
   };
 };
+
+.filterButton {
+  background-color: var(--primary-200);
+
+  &.active {
+    background-color: var(--primary-200);
+    background-color: var(--primary);
+    color: white;
+  }
+};
