--- a/src/theme/scss/about.module.scss
+++ b/src/theme/scss/about.module.scss
@@ -1,4 +1,6 @@
 .container {
+  font-family: 'Inter', sans-serif;
+
   strong {
     color: var(--primary);
   };
@@ -56,6 +58,44 @@
   
     &::-webkit-scrollbar-thumb:hover {
       border-radius: 6px;
+    };
+  };
+
+  h1 {
+    color: var(--primary);
+    font-size: 1.8rem;
+    font-weight: bold;
+
+    &:not(:first-of-type) {
+      margin-top: 10px;
+    };
+  };
+
+  li {
+    list-style: none;
+    margin-left: 10px;
+    margin-top: 10px;
+
+    &:last-child {
+      margin-bottom: 10px;
+    };
+  };
+
+  p {
+    & + p {
+      margin-top: 15px;
+    };
+  };
+};
+
+.mobile {
+  h1 {
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+
+    &:not(:first-of-type) {
+      margin-top: 10px;
     };
   };
 };
