--- a/apps/projects/src/styles/index.module.scss
+++ b/apps/projects/src/styles/index.module.scss
@@ -25,18 +25,41 @@
     };
 
     .item {
-      height: auto;
-      padding: 1rem;
+      height: 100%;
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      min-height: 100px;
+      justify-content: space-between;
+      text-align: center;
+      align-items: center;
+
       border-radius: 0.5rem;
+      
+      .body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      };
+
+      .banner {
+        height: 100%;
+        width: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        border-bottom-right-radius: 0.5rem;
+        border-top-right-radius: 0.5rem;
+      };
 
       background-color: var(--home-primary-color-100);
       transition: background-color .5s linear;
 
+      box-shadow: var(--home-primary-color-400) 0 1px 1px;
+
       &:hover {
         background-color: var(--home-primary-color-300);
+        cursor: pointer;
       };
-
-      box-shadow: var(--home-primary-color-400) 0 1px 1px;
     };
   };
 };
