--- a/apps/projects/src/styles/snake.module.scss
+++ b/apps/projects/src/styles/snake.module.scss
@@ -4,10 +4,24 @@
   overflow: hidden;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
   background-color: black;
+
+  .header {
+    color: purple;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    svg {
+      margin-right: 1rem;
+      font-size: 2rem;
+    };
+  };
   
   .body {
     display: grid;
@@ -22,6 +36,13 @@
 
       &.snake {
         background-color: purple;
+      };
+
+      &.snakeHead {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color:rgb(105, 4, 105);
       };
 
       &.active {
